# Windows-Camera-Capture

./: CMakeLists.txt  README.md  config.json
DuiLib/: CMakeLists.txt
example/: CMakeLists.txt  device_window.cpp  device_window.h  main.cpp  main_window.cpp  main_window.h  my_window.cpp  my_window.h
example/capture/: capture_frame.cpp  capture_frame.h  capture_frame_factory.cpp  capture_frame_factory.h  frame_buffer.cpp  frame_buffer.h  sink_filter_ds.cpp  sink_filter_ds.h  video_capture.cpp  video_capture.h  video_capture_ds.cpp  video_capture_ds.h  video_device_ds.cpp  video_device_ds.h  video_device_manager.cpp  video_device_manager.h  video_device_observer.cpp  video_device_observer.h  video_message_loop.cpp  video_message_loop.h  video_utils.cpp  video_utils.h
example/common/: string_utils.cpp  string_utils.h  video_frame.h
example/render/sdl2/: video_render_sdl.cpp  video_render_sdl.h
resources/: device_window.xml  main_window.xml
third/lib/: jpeg-static.lib  turbojpeg-static.lib  turbojpeg.lib  yuv.lib
